fix css alignment

--- a/packages/react-storage/src/styles/storage-browser.css
+++ b/packages/react-storage/src/styles/storage-browser.css
@@ -120,7 +120,7 @@
 
 .storage-browser__destination {
   grid-column: 1 / 3;
-  margin: -0;
+  margin-inline-start: var(--storage-browser-gap);
 }
 
 .storage-browser__summary__definition,
